# Kuro

./: CMakeLists.txt  README.md  kuro.c  qemu.sh
efi/: efi.c  efi.h  efi_stdio.inl
